--- a/package.json
+++ b/package.json
@@ -16,7 +16,11 @@
     "googleapis": "^140.0.0",
     "openai": "^4.52.7",
     "pdf-parse": "^1.1.1",
-    "mailparser": "^3.7.1"
+    "mailparser": "^3.7.1",
+    "@google/genai": "^0.15.0",          // <-- NEW: Required for Gemini AI
+    "@supabase/supabase-js": "^2.43.4",   // <-- NEW: Required for Supabase
+    "cors": "^2.8.5",                     // <-- ADDED: Standard for API
+    "dotenv": "^16.4.5"                   // <-- ADDED: Best practice for env variables
   },
   "engines": {
     "node": ">=20.0.0"
