--- a/package.json
+++ b/package.json
@@ -20,7 +20,7 @@
     "@google/genai": "^0.15.0",          
     "@supabase/supabase-js": "^2.43.4",   
     "cors": "^2.8.5",                     
-    "dotenv": "^16.4.5"
+    "dotenv": "^16.4.5",
     "node-cron": "^3.0.3" 
   },
   "engines": {
