--- a/package.json
+++ b/package.json
@@ -5,23 +5,24 @@
   "type": "module",
   "main": "src/server.js",
   "scripts": {
-    "start": "node src/server.js"
+    "start": "node src/server.js",
+    "prestart": "node scripts/gen-forms-registry.mjs"
   },
   "dependencies": {
+    "@google/genai": "^0.15.0",
+    "@supabase/supabase-js": "^2.43.4",
+    "cors": "^2.8.5",
     "dayjs": "^1.11.11",
+    "dotenv": "^16.4.5",
     "ejs": "^3.1.10",
     "express": "^4.19.2",
-    "nodemailer": "^6.9.7",
-    "puppeteer-core": "22.6.4",
     "googleapis": "^140.0.0",
+    "mailparser": "^3.7.1",
+    "node-cron": "^3.0.3",
+    "nodemailer": "^6.9.7",
     "openai": "^4.52.7",
     "pdf-parse": "^1.1.1",
-    "mailparser": "^3.7.1",
-    "@google/genai": "^0.15.0",          
-    "@supabase/supabase-js": "^2.43.4",   
-    "cors": "^2.8.5",                     
-    "dotenv": "^16.4.5",
-    "node-cron": "^3.0.3" 
+    "puppeteer-core": "22.6.4"
   },
   "engines": {
     "node": ">=20.0.0"
