RSS: Bar treatment — SEGMENT default roofer, formData parity, FILENAME_MAP, README, test script

--- a/.gitignore
+++ b/.gitignore
@@ -1,12 +1,14 @@
-
 # macOS junk
 .DS_Store
 **/.DS_Store
 
-# local pdf outputs
+# local pdf outputs and artifacts (RSS clean)
 *.pdf
+*.log
+*.png
+tmp/
+output/
 
 # deps
 node_modules/
 .env
-.DS_Store
